# f22_math_233_labs

./: CMakeLists.txt  FVsolver.cpp  FVsolver.h  FullMatrix.cpp  FullMatrix.h  Grid2d.cpp  Grid2d.h  Matrix.cpp  Matrix.h  README.md  SL_method.cpp  SL_method.h  cf2.h  main_lab01.cpp  main_lab02.cpp  main_lab03.cpp  main_lab04.cpp  main_lab05.cpp  main_lab06.cpp  math_tools.cpp  math_tools.h
lib/: FVsolver.cpp  FullMatrix.cpp  FullMatrix.h  Grid2d.cpp  Matrix.cpp  Matrix.h  Solvers.cpp  Solvers.h  cf2.cpp  cf2.h  math_tools.cpp  math_tools.h  newVTK.vtk
mains/: main_lab01.cpp  main_lab02.cpp  main_lab03.cpp  main_lab04.cpp  main_lab05.cpp  main_lab06.cpp  main_lab08.cpp
