cmake_minimum_required(VERSION 3.22)
project(f22_math_233_labs)

set(CMAKE_CXX_STANDARD 14)

add_executable(f22_math_233_labs Grid2d.cpp Grid2d.h FullMatrix.cpp FullMatrix.h math_tools.cpp math_tools.h SL_method.cpp SL_method.h Matrix.cpp Matrix.h main_lab05.cpp FVsolver.cpp FVsolver.h cf2.cpp cf2.h)
